Rechnungslisten fertig, inclusive sortieren und filtern. CSV export funktioniert. Consumables können angelegt werden. Rechnungsdetailansicht/template teilweise gelayouted.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -5,5 +5,6 @@
 <a wicket:id="PackageLink">Pakete</a><br>
 <a wicket:id="KeycardLink">Keycards</a><br>
 <a wicket:id="AccessGrantLink">Zugangszeiten</a><br>
+<a wicket:id="ConsumableLink">Consumables</a><br>
 
 </wicket:extend>
