Changelog in der Email vom 31.12.2011

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -7,4 +7,8 @@
 <a wicket:id="AccessGrantLink">Zugangszeiten</a><br>
 <a wicket:id="ConsumableLink">Consumables</a><br>
 
+<a wicket:id="DevicesLink">Ger&auml;te</a><br>
+<br><br><br>
+<a wicket:id="AccessTestLink">Access Test</a><br>
+
 </wicket:extend>
