--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
@@ -20,6 +20,13 @@
 			<input wicket:id="addSubscription" type="submit"
 				value="Zusatzpaket buchen" class="minimal">
 		</form>
+		
+		<form wicket:id="createEntries">
+			<div class="type-text">
+				<label for="">Abrechnen bis</label> <input wicket:id="accountUntil" type="text">
+			</div>
+			<input type="submit" value="do">
+		</form>
 	</div>
 </wicket:panel>
 </html>
