SubscriptionListPage in den Stammdaten hinzugefügt und die DataProvider Klassen sortierbar gemach.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -6,6 +6,7 @@
 <a wicket:id="KeycardLink">Keycards</a><br>
 <a wicket:id="AccessGrantLink">Zugangszeiten</a><br>
 <a wicket:id="ConsumableLink">Consumables</a><br>
+<a wicket:id="SubscriptionLink">Subscriptions</a><br>
 
 <a wicket:id="DevicesLink">Ger&auml;te</a><br>
 <br><br><br>
