--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionDetailPage.html
@@ -22,11 +22,15 @@
 				</wicket:container>
 
 				<div class="type-text">
+					<label for="">Bezahlt bis</label> <input wicket:id="payedUntil" type="text">
+				</div>
+				
+				<div class="type-text">
 					<label for="">Preis</label> <input wicket:id="priceOverruled" type="text">
 				</div>
 
 				<div class="type-select">
-					<label for="">Zahlungsart</label> <select wicket:id="paymentMethod" id="txtPaymentMethod">
+					<label for="">Zahlungsart</label> <select wicket:id="paymentMethod">
 					</select>
 				</div>
 
