Die Consumables können sortiert werden. Es werden schöne Enum Werte in den Tabellen angezeigt (Zugangszeiten, Packages)

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/ConsumableListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/ConsumableListPage.html
@@ -9,7 +9,7 @@
 
 <br/> <span wicket:id="consumableCount"></span> <br/> <br/>
 
-<input wicket:id="addConsumable" type="button" value="neues Paket" class="minimal"/>
+<input wicket:id="addConsumable" type="button" value="neues Consumable" class="minimal"/>
 
 </wicket:extend>
 </html>
