membership-address, users

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
@@ -39,15 +39,15 @@
 	   <legend>Adresse</legend>
 	   <div class="type-text">
 	      <label for="address-street">Stra&szlig;e/Hausnummer</label>
-	      <input wicket:id="address.street" type="text" size="50" id="address-street"/>
+	      <input wicket:id="companyAddress.street" type="text" size="50" id="address-street"/>
 	   </div>
 	   <div class="type-text">
 	      <label for="address-city">Ort</label>
-	      <input wicket:id="address.city" type="text" size="50" id="address-city"/>
+	      <input wicket:id="companyAddress.city" type="text" size="50" id="address-city"/>
 	   </div>
 	   <div class="type-text">
 	      <label for="address-zipcode">Postleitzahl</label>
-	      <input wicket:id="address.zipCode" type="text" size="50" id="address-zipcode"/>
+	      <input wicket:id="companyAddress.zipCode" type="text" size="50" id="address-zipcode"/>
 	   </div>
 	</fieldset>
 </fieldset>
