Feedback, Sicherheitsabfragen vor dem Löschen, Quelltexte überarbeitet

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 
 <h1>Pakete</h1>
 
+<table wicket:id="packageTable"></table>
 
-<table wicket:id="packageTable" border="0"></table>
+<br/> <span wicket:id="packageCount"></span> <br/> <br/>
 
-<br> <span wicket:id="packageCount"></span> <br> <br>
-
-<input wicket:id="addPackage" type="button" value="neues Paket" class="minimal">
+<input wicket:id="addPackage" type="button" value="neues Paket" class="minimal"/>
 
 </wicket:extend>
+</html>
