--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/AccessGrantListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/AccessGrantListPage.html
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 
 	<h1>Zugangszeiten</h1>
 
 	<form wicket:id="form" action="" method="POST" class="yform" style="width: 500px">
-		<table wicket:id="AccessGrantTable" border="0"></table>
+		<table wicket:id="AccessGrantTable"></table>
 
-		<br>
-		<span wicket:id="AccessGrantCount"></span> <br>
-		<br>
-		<input wicket:id="submit" type="submit" class="minimal">
+		<br/>
+		<span wicket:id="AccessGrantCount"></span> <br/>
+		<br/>
+		<input wicket:id="submit" type="submit" class="minimal"/>
 	</form>
 	
 </wicket:extend>
+</html>
