--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/KeycardListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/KeycardListPage.html
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 
 <h1>Keycards</h1>
 
-<table wicket:id="keycardTable" border="0"></table>
+<table wicket:id="keycardTable"></table>
 
-<br> <span wicket:id="keycardCount"></span> <br> <br>
+<br/> <span wicket:id="keycardCount"></span> <br/> <br/>
 
-<input wicket:id="addKeycard" type="button" value="neue Keycard" class="minimal">
+<input wicket:id="addKeycard" type="button" value="neue Keycard" class="minimal"/>
 
 </wicket:extend>
+</html>
