--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/device/DeviceListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/device/DeviceListPage.html
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 
 <h1>Ger&auml;te</h1>
 
-<table wicket:id="deviceTable" border="0"></table>
+<table wicket:id="deviceTable"></table>
 
-<br> <span wicket:id="deviceCount"></span> <br><br>
+<br/> <span wicket:id="deviceCount"></span> <br/><br/>
 
-<input wicket:id="addDevice" type="button" value="neues Ger&auml;t" class="minimal">
+<input wicket:id="addDevice" type="button" value="neues Ger&auml;t" class="minimal"/>
 
 </wicket:extend>
+</html>
