--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/AccessGrantDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/AccessGrantDetailPage.html
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 	<div style="padding: 10px;">
-		<h1>Accessgrant</h1>
+		<h1><span wicket:id="pageHeader"></span></h1>
+		<div wicket:id="feedback" style="color:red;"/>
 
-		<form wicket:id="form" action="" method="POST" class="yform"
-			style="width: 500px">
+		<form wicket:id="form" action="" method="POST" class="yform" style="width: 500px">
 
 			<fieldset id="fldDetails" class="columnar">
 				<legend>Details</legend>
 
 				<div class="type-text">
-					<label for="rfid">Name</label> <input wicket:id="Name" type="text">
+					<label for="rfid">Name</label> <input wicket:id="Name" type="text"/>
 				</div>
 
 				<div class="type-select">
-					<label for="">Wochentag</label> <select wicket:id="DayOfWeek"></select>
+					<label for="">Wochentag</label> <select wicket:id="DayOfWeek"/>
 				</div>
 
 				<div class="type-text">
-					<label for="timeFrom">Von (Uhrzeit)</label> <input wicket:id="TimeFrom" type="text">
+					<label for="timeFrom">Von (Uhrzeit)</label> <input wicket:id="TimeFrom" type="text"/>
 				</div>
 				
 				<div class="type-text">
-					<label for="timeUntil">Bis (Uhrzeit)</label> <input wicket:id="TimeUntil" type="text">
+					<label for="timeUntil">Bis (Uhrzeit)</label> <input wicket:id="TimeUntil" type="text"/>
 				</div>
 
 			</fieldset>
 
-			<input type="submit" value="Speichern" class="minimal">
+			<input type="submit" value="Speichern" class="minimal"/>
 		</form>
 	</div>
 </wicket:extend>
+</html>
