--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/KeycardDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/KeycardDetailPage.html
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 	<div style="padding: 10px;">
-		<h1>Keycard</h1>
-
-		<form wicket:id="form" action="" method="POST" class="yform"
-			style="width: 500px">
+		<h1><span wicket:id="pageHeader"></span></h1>
+		<div wicket:id="feedback" style="color:red;"/>
+		
+		<form wicket:id="form" action="" method="POST" class="yform" style="width: 500px">
 
 			<fieldset id="fldDetails" class="columnar">
 				<legend>Details</legend>
 
 				<div class="type-text">
-					<label for="active">Keycard aktiv</label> <input wicket:id="active"
-						type="checkbox" />
+					<label for="active">Keycard aktiv</label> <input wicket:id="active" type="checkbox" />
 				</div>
 
 				<div class="type-text">
-					<label for="description">Beschreibung</label>
-					<textarea wicket:id="description" cols="50" rows="4"></textarea>
+					<label for="description">Beschreibung</label> <textarea wicket:id="description" cols="50" rows="4"></textarea>
 				</div>
 
 				<div class="type-text">
-					<label for="rfid">RFID</label> <input wicket:id="rfid" type="text">
+					<label for="rfid">RFID</label> <input wicket:id="rfid" type="text" />
 				</div>
 
 
@@ -28,12 +27,13 @@
 
 			<fieldset id="fldAccessGrants" class="columnar">
 				<legend>Zutrittszeiten</legend>
-				<table wicket:id="AccessGrantsFromKeycardTable" border="0"></table>
-				<br>
+				<table wicket:id="AccessGrantsFromKeycardTable"></table>
+				<br />
 				<button wicket:id="addAccessGrantToKeyCard" class="minimal">Zutrittszeiten &auml;ndern</button>
 			</fieldset>
 
-			<input type="submit" value="Speichern" class="minimal">
+			<input type="submit" value="Speichern" class="minimal" />
 		</form>
 	</div>
 </wicket:extend>
+</html>
