--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/device/DeviceDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/device/DeviceDetailPage.html
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 	<div style="padding: 10px;">
-		<h1>Ger&auml;t</h1>
+		<h1><span wicket:id="pageHeader"></span></h1>
+		<div wicket:id="feedback" style="color: red;" />
 
-		<form wicket:id="form" action="" method="POST" class="yform"
-			style="width: 500px">
+		<form wicket:id="form" action="" method="POST" class="yform" style="width: 500px">
 
 			<fieldset id="fldDetails" class="columnar">
 				<legend>Details</legend>
 
 				<div class="type-text">
-					<label for="deviceID">Device ID</label> <input wicket:id="deviceId" type="text">
+					<label for="deviceID">Device ID</label> <input wicket:id="deviceId" type="text" />
 				</div>
+				
 				<div class="type-text">
-					<label for="name">Name</label> <input wicket:id="name" type="text">
+					<label for="name">Name</label> <input wicket:id="name" type="text" />
 				</div>
 
 				<div class="type-text">
-					<label for="description">Beschreibung</label>
-					<textarea wicket:id="description" cols="50" rows="4"></textarea>
+					<label for="description">Beschreibung</label> <textarea wicket:id="description" cols="50" rows="4"></textarea>
 				</div>
+				
 			</fieldset>
 
-
-			<input type="submit" value="Speichern" class="minimal">
+			<input type="submit" value="Speichern" class="minimal" />
 		</form>
 	</div>
 </wicket:extend>
+</html>
