--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/ConsumableAddPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/ConsumableAddPage.html
@@ -3,6 +3,7 @@
 <wicket:extend>
 	<div style="padding: 10px;">
 		<h1><span wicket:id="pageHeader"></span></h1>
+		<div wicket:id="feedback" style="color:red;"/>
 
 		<form wicket:id="form" action="" method="POST" class="yform" style="width: 500px">
 
