fix für "formatfehler" bei Rechnungsbetrag. Kommentar auf Rechnungsdetailansicht hinzugefügt

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/invoice/InvoiceDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/invoice/InvoiceDetailPage.html
@@ -75,6 +75,9 @@
 		<span wicket:id="iban"></span><br/>
 		<span wicket:id="bic"></span>
 	</div>
+	<div>
+		<span wicket:id="comment"></span>
+	</div>
 	<div id="thx">
 		<span>Vielen Dank!</span>
 	</div>
