--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/ConsumationEntryDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/ConsumationEntryDetailPage.html
@@ -27,6 +27,11 @@
 				<div class="type-text">
 					<label for="">Anzahl</label> <input wicket:id="quantity" type="text">
 				</div>
+				
+				<div class="type-text">
+					<label for="">Einheit</label> <input wicket:id="unit" type="text">
+				</div>
+				
 
 			</fieldset>
 
