Kommentar zur Rechnung sollte jetzt in der Rechnungsansicht anzeigbar sein

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/EntryPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/EntryPanel.html
@@ -45,7 +45,7 @@
 	</div>
 	<div class="type-text">
 		<label for="">Anmerkung<br><small>(wird auf Rechnung gedruckt)</small></label>
-		<textarea name="txtCompanyAddress" cols="50" rows="4"></textarea>
+		<textarea wicket:id="comment" name="txtCompanyAddress" cols="50" rows="4"></textarea>
 	</div>
 
  	 <input wicket:id="submit" type="submit" value="Rechnung erstellen" class="minimal">
