--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -11,5 +11,6 @@
 <a wicket:id="DevicesLink">Ger&auml;te</a><br>
 <br><br><br>
 <a wicket:id="AccessTestLink">Access Test</a><br>
+<a wicket:id="CreateTestDataLink">Create Test Data</a><br>
 
 </wicket:extend>
