--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
 		<li><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
 		<li><a wicket:id="rechnungenLink" href="">Rechnungen</a></li>
 		<li><a wicket:id="stammdatenLink" href="">Stammdaten</a></li>
-      		
+		<li><a wicket:id="aufgabenLink" href="">Aufgaben</a></li>
 	</ul>
 	</div>
 	<div style="float:right;">
