--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
@@ -22,10 +22,11 @@
 		</form>
 		
 		<form wicket:id="createEntries">
+			
 			<div class="type-text">
-				<label for="">Abrechnen bis</label> <input wicket:id="accountUntil" type="text">
+				<label for="">laufende Packete bis</label> <input wicket:id="accountUntil" type="text"> <label>abrechnen</label>
 			</div>
-			<input type="submit" value="do">
+			<input type="submit" value="Buchungen erstellen" class="minimal">
 		</form>
 	</div>
 </wicket:panel>
