--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/invoice/InvoiceListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/invoice/InvoiceListPage.html
@@ -15,7 +15,8 @@
 		<form wicket:id="form">
 			<table wicket:id="invTable"></table>
 			<input wicket:id="submit" type="submit" value="Speichern" class="minimal"/>
-			<input wicket:id="export" type="submit" value="CSV exportiern" class="minimal"/>
+			<input wicket:id="bankExport" type="submit" value="Bankdatenträger erstellen" class="minimal"/>
+			<input wicket:id="csvExport" type="submit" value="CVS exportieren" class="minimal"/>
 		</form>
 		<span wicket:id="invCount"></span>
 	</div>
