--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/ConsumableListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/ConsumableListPage.html
@@ -10,6 +10,7 @@
 <br/> <span wicket:id="consumableCount"></span> <br/> <br/>
 
 <input wicket:id="addConsumable" type="button" value="neues Consumable" class="minimal"/>
+<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
 
 </wicket:extend>
 </html>
