--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageAddPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageAddPage.html
@@ -41,6 +41,7 @@
 			</fieldset>
 
 			<input type="submit" value="Speichern" class="minimal" />
+			<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
 		</form>
 	</div>
 </wicket:extend>
