--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
@@ -9,6 +9,7 @@
 <br/> <span wicket:id="packageCount"></span> <br/> <br/>
 
 <input wicket:id="addPackage" type="button" value="neues Paket" class="minimal"/>
+<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
 
 </wicket:extend>
 </html>
