--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/SubscriptionListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/SubscriptionListPage.html
@@ -9,5 +9,7 @@
 
 <br/> <span wicket:id="subscriptionCount"></span> <br/> <br/>
 
+<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
+
 </wicket:extend>
 </html>
