--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/AccessGrantListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/AccessGrantListPage.html
@@ -10,7 +10,9 @@
 		<br/>
 		<span wicket:id="AccessGrantCount"></span> <br/>
 		<br/>
+		
 		<input wicket:id="submit" type="submit" class="minimal"/>
+		<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
 	</form>
 	
 </wicket:extend>
