--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/UserListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/UserListPage.html
@@ -2,13 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 
-<h1>Keycards</h1>
+<h1>Mitglieder</h1>
 
-<table wicket:id="keycardTable"></table>
+<table wicket:id="userTable"></table>
 
-<br/> <span wicket:id="keycardCount"></span> <br/> <br/>
+<br/> <span wicket:id="userCount"></span> <br/><br/>
 
-<input wicket:id="addKeycard" type="button" value="neue Keycard" class="minimal"/>
 <button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
 
 </wicket:extend>
