--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
@@ -21,6 +21,7 @@ $(document).ready(function(){
 	<div style="float:left;">
 	<ul id="mainmenu">
 		<li><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
+		<li><a wicket:id="subscriptionsLink" href="">Subscriptions</a></li>
 		<li><a wicket:id="rechnungenLink" href="">Rechnungen</a></li>
 		<li><a wicket:id="stammdatenLink" href="">Stammdaten</a></li>
 		<li><a wicket:id="aufgabenLink" href="">Aufgaben</a></li>
