--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/KeycardDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/access/KeycardDetailPage.html
@@ -33,6 +33,7 @@
 			</fieldset>
 
 			<input type="submit" value="Speichern" class="minimal" />
+			<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
 		</form>
 	</div>
 </wicket:extend>
