--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/UserDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/UserDetailPage.html
@@ -2,24 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
 	<div style="padding: 10px;">
-		<h1><span wicket:id="pageHeader"></span></h1>
+		<h1>Mitglied</h1>
 		<div wicket:id="feedback" style="color:red;"/>
-
+		
 		<form wicket:id="form" action="" method="POST" class="yform" style="width: 500px">
 
-			<fieldset id="fldNonProfit" class="columnar">
-				<legend>Details</legend>
+			<fieldset id="fldKeycard" class="columnar">
+				<legend>Keycard</legend>
+
 				<div class="type-text">
-					<label for="name">Name</label> <input wicket:id="name" type="text" />
+					<label for="active">Keycard aktiv</label> <input wicket:id="keyCard.active" type="checkbox" />
 				</div>
 
 				<div class="type-text">
-					<label for="name">Preis pro Einheit</label> <input wicket:id="pricePerUnit" type="text" />
+					<label for="rfid">RFID</label> <input wicket:id="keyCard.rfid" type="text" />
 				</div>
+			</fieldset>
 
-				<div class="type-text">
-					<label for="name">Einheit</label> <input wicket:id="unit" type="text" />
-				</div>
+			<fieldset id="fldAccessGrants" class="columnar">
+				<legend>Geschulte Geräte</legend>
+				<table wicket:id="TrainedDevicesFromUserTable"></table>
+				<br />
+				<button wicket:id="addDeviceToUser" class="minimal">Geräte &auml;ndern</button>
 			</fieldset>
 
 			<input type="submit" value="Speichern" class="minimal" />
