vorarbeit fr filter

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
@@ -15,7 +15,7 @@
 					ausgetretene Mitglieder
 				</div>
 				<div style="float: right;">
-					Filter: <input type="text" name=""/>
+					Filter: <input wicket:id="filterInput" type="text" name="filter"/>
 				</div>
 			</div>
 			<br/>
