--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -15,6 +15,7 @@
 <br/><br/><br/>
 <a wicket:id="AccessTestLink">Access Test</a><br/>
 <a wicket:id="CreateTestDataLink">Create Test Data</a><br/>
+<a wicket:id="RuntimeExceptionLink">Runtime Exception auslösen</a> <br/>
 
 </wicket:extend>
 </html>
