refactoring and clean up of html-files refs #5538, note that html-files of reusable components are now beside the java sources. enabled cdi for REST service impl

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/HomePage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/HomePage.html
@@ -1,4 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
     <head>
 		<link rel="stylesheet" type="text/css" href="css/happylab.css" media="all" />
 	    <title>Happy Lab Management Tool</title>
@@ -7,7 +8,7 @@
     <body>
     <div id="wrapper">
     <div id="headerbar">
-	   <div id="logo"><a href="http://www.happylab.at"><img src="img/happylab-logo.png" alt=""></a></div>
+	   <div id="logo"><a href="http://www.happylab.at"><img src="img/happylab-logo.png" alt=""/></a></div>
 	   <div id="mainmenu">    
         <ul><li>Happy Lab Management Tool</li></ul>
        </div>
@@ -15,7 +16,7 @@
     <br/>        
     <h1><span wicket:id="message">message will be here</span></h1>
     <form wicket:id="main" >
-	&Uuml;berpr&uuml;fe, ob folgende Keycard Zutritt hat:  <input wicket:id="inputRfid" />  <input wicket:id="updateLink" type="submit" value="Update"/>
+	&Uuml;berpr&uuml;fe, ob folgende Keycard Zutritt hat:  <input type="text" wicket:id="inputRfid" />  <input wicket:id="updateLink" type="submit" value="Update"/>
     <a href="#" wicket:id="checkAccess">more information</a> <br/>
     (derzeit hat nur rfid "admin" zugang)
 	</form>
