--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/authentication/FablabSignInPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/authentication/FablabSignInPage.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
    Licensed to the Apache Software Foundation (ASF) under one or more
    contributor license agreements.  See the NOTICE file distributed with
@@ -14,10 +15,10 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
 <head>
     <title>Fab Lab - Anmelden</title>
-      <link rel="stylesheet" type="text/css" href="css/main.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="all" />
 <!-- <style>
         body { background-image: none; }
     </style>
@@ -29,9 +30,9 @@
 
     <h2>Bitte melden Sie sich an</h2>
     <p>
-    <i>(Username und Passwort müssen gleich sein)</i>
+    <i>(Username und Passwort mÃ¼ssen gleich sein)</i>
     </p>
-    <span wicket:id="signInPanel" id="signInPanel"/>
+    <span wicket:id="signInPanel" id="signInPanel">[sign in panel will be here]</span>
 </div>  
 </body>
 </html>
