--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/ConsumationEntryDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/ConsumationEntryDetailPage.html
@@ -30,7 +30,7 @@
 				</div>
 				
 				<div class="type-text">
-					<label for="">Einheit</label> <input wicket:id="unit" type="text">
+					<label for="">Einheit</label> <input wicket:id="unit" type="text"/>
 				</div>
 				
 
