--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/InternalCommentsPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/InternalCommentsPanel.html
@@ -8,7 +8,7 @@
    <legend>Interne Kommentare</legend>
    <textarea wicket:id="internalComment" style="width: 99%; height: 90%;"></textarea>
 </fieldset>
-<input wicket:id="submit" type="submit" value="Speichern" class="minimal">
+<input wicket:id="submit" type="submit" value="Speichern" class="minimal"/>
 
 </form>
 </div>
