--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/BasePage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/BasePage.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
 <head>
 <title>Fab Lab - BasePage</title>
 <link wicket:id="stylesheetMain"/>
@@ -9,7 +9,7 @@
 
 <body>
 
-<span wicket:id="topNavPanel">x</span>
+<span wicket:id="mainMenuPanel">x</span>
 <div style="padding: 10px;">
 
 <wicket:child/>
