moved layout pages also to .web refs #5538, ErrorPagehandler now ignores SessionExpired, so redirect to login works again

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/ErrorPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/ErrorPage.html
@@ -4,8 +4,7 @@
 <form wicket:id="form">
 	<h1>Ein Fehler ist aufgetreten</h1>
 	<p></p>
-	<p>Wahrscheinlich ist Ihre Sitzung abgelaufen, bitte melden Sie sich neu an.</p>
-	<p>Wenn Sie den Fehler melden, werden wir uns bemühen diesen so rasch als möglich zu beheben. Für zusätzliche Informationen oder Anregungen sind wir Ihnen dankbar:</p>
+	<p>Wenn Sie den Fehler melden, werden wir uns bemühen, diesen so rasch als möglich zu beheben. Für zusätzliche Informationen oder Anregungen sind wir Ihnen dankbar:</p>
 	<textarea wicket:id="commentInput" rows="5" style="width: 98%;"></textarea>
 	<input type="submit" wicket:id="submitButton" value="Fehler melden"/>
 	<p> 
