--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/MasterDataPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/MasterDataPage.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:extend>
-<h1 wicket:id="stammdatenLabel">overwrite this</h1>
+<h1 wicket:id="masterdataLabel">overwrite this</h1>
 
 <a wicket:id="PackageLink">Pakete</a><br/>
 <a wicket:id="KeycardLink">Keycards</a><br/>
