--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
@@ -155,7 +155,7 @@
 	<legend>Allgemeine Daten</legend>
 	<div class="type-select">
 		<label for="membershipstatus">Art der Mitgliedschaft</label>
-		<select wicket:id="type" id="membershipstatus">
+		<select wicket:id="status" id="membershipstatus">
 			<option>au&szlig;erordentlich</option>
 			<option>ordentlich</option>
 			<option>Ehrenmitglied</option>
