--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/MainMenuPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/MainMenuPanel.html
@@ -20,11 +20,11 @@ $(document).ready(function(){
 <div id="menubar">
 	<div style="float:left;">
 	<ul id="mainmenu">
-		<li><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
+		<li><a wicket:id="membershipsLink" href="">Mitglieder</a></li>
 		<li><a wicket:id="subscriptionsLink" href="">Subscriptions</a></li>
-		<li><a wicket:id="rechnungenLink" href="">Rechnungen</a></li>
-		<li><a wicket:id="masterdatatLink" href="">Stammdaten</a></li>
-		<li><a wicket:id="aufgabenLink" href="">Aufgaben</a></li>
+		<li><a wicket:id="invoicesLink" href="">Rechnungen</a></li>
+		<li><a wicket:id="masterdataLink" href="">Stammdaten</a></li>
+		<li><a wicket:id="accountingLink" href="">Aufgaben</a></li>
 	</ul>
 	</div>
 	<div style="float:right;">
