--- a/fablabman/src/main/java/at/happylab/fablabtool/markup/html/tabs/AjaxTabbedPanelWithContext.html
+++ b/fablabman/src/main/java/at/happylab/fablabtool/markup/html/tabs/AjaxTabbedPanelWithContext.html
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
 <div wicket:id="tabs-container" class="tab-row">
 <ul>
@@ -11,3 +12,4 @@
 </div>
 <div wicket:id="panel" class="tab-panel">[panel]</div>
 </wicket:panel>
+</html>
