--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/invoice/InvoiceDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/invoice/InvoiceDetailPage.html
@@ -58,9 +58,7 @@
 				<td>
 					<span>Rechnungsbetrag (inkl. 0% USt.):</span>
 				</td>
-				<td/>
-				<td/>
-				<td>
+				<td id="sum">
 					<span wicket:id="totalSum"></span>
 				</td>
 			</tr>
@@ -79,6 +77,7 @@
 	<div id="comment">
 		<span wicket:id="comment"></span>
 	</div>
+	<p></p>
 	<div id="thx">
 		<span>Vielen Dank!</span>
 	</div>
