membership list can now be sorted and filtered fixes #4196 fixes #4195

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/ErrorPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/ErrorPage.html
@@ -8,7 +8,7 @@
 	<textarea wicket:id="commentInput" rows="5" style="width: 98%;"></textarea>
 	<input type="submit" wicket:id="submitButton" value="Fehler melden"/>
 	<p> 
-	<span wicket:id="errormessageLabel"></span>
+	<!--  <span wicket:id="errormessageLabel"></span> -->
 	</p>	
 </form>
 </wicket:extend>
