--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
@@ -25,7 +25,7 @@
 				<table wicket:id="mitgliederTabelle"></table>
 			</div>
 
-			<br/><!-- <span wicket:id="mitgliederAnzahl"></span>  --> <br/>
+			<br/>Datensätze: <span wicket:id="mitgliederAnzahl"></span> <br/>
          <div>
             <button wicket:id="addPrivateMembershipLink" class="minimal">Neues Mitglied</button>
             <!-- 
