WebUser/Admin verwaltung bei Stammdaten hinzugefügt jede menge Invoice related refactoring. Invoice detailansichtslayout verbessert.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/MasterDataPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/MasterDataPage.html
@@ -12,6 +12,7 @@
 <a wicket:id="DevicesLink">Ger&auml;te</a><br/>
 
 <a wicket:id="UsersLink">Mitglieder</a><br/>
+<a wicket:id="WebUserLink">Administratoren</a><br/>
 <br/><br/><br/>
 <a wicket:id="AccessTestLink">Access Test</a><br/>
 <a wicket:id="CreateTestDataLink">Create Test Data</a><br/>
