Kommentare und minor refactoring. WebUser und Consumation sind sortable.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/ConsumableListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/ConsumableListPage.html
@@ -10,7 +10,7 @@
 <br/> <span wicket:id="consumableCount"></span> <br/> <br/>
 
 <input wicket:id="addConsumable" type="button" value="neues Consumable" class="minimal"/>
-<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
+<input wicket:id="goBack" type="button" value="Zur&uuml;ck" class="minimal"/>
 
 </wicket:extend>
 </html>
