--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/WebUserListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/maintenance/WebUserListPage.html
@@ -4,13 +4,12 @@
 
 <h1>Administratoren</h1>
 
-
 <table wicket:id="webUserTable"></table>
 
 <br/> <span wicket:id="webUserCount"></span> <br/> <br/>
 
 <input wicket:id="addWebUser" type="button" value="neuer Administrator" class="minimal"/>
-<button wicket:id="goBack" class="minimal">Zur&uuml;ck</button>
+<input wicket:id="goBack" type="button" value="Zur&uuml;ck" class="minimal"/>
 
 </wicket:extend>
 </html>
