Tests erweitert. KeycardManagement.java überarbeitet

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
@@ -27,7 +27,7 @@
 
 			<br/>Datensätze: <span wicket:id="mitgliederAnzahl"></span> <br/>
          <div>
-            <button wicket:id="addPrivateMembershipLink" class="minimal">Neues Mitglied</button>
+            <button wicket:id="addPrivateMembershipLink" name="btnNewMembership" class="minimal">Neues Mitglied</button>
             <!-- 
             <button wicket:id="addBusinessMembershipLink" class="minimal">Neues Business Mitglied</button>
             -->            
