--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/ErrorPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/ErrorPage.html
@@ -8,7 +8,7 @@
 	<textarea wicket:id="commentInput" rows="5" style="width: 98%;"></textarea>
 	<input type="submit" wicket:id="submitButton" value="Fehler melden"/>
 	<p> 
-	<pre wicket:id="errormessageLabel"></pre>
+<!-- 	<pre wicket:id="errormessageLabel"></pre> -->
 	</p>	
 </form>
 </wicket:extend>
