fixed filtering for number fields, fixed-width layout of pages, fixed layout of login page

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/BasePage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/BasePage.html
@@ -10,7 +10,7 @@
 <body>
 
 <span wicket:id="mainMenuPanel">x</span>
-<div style="padding: 10px;">
+<div id="main" style="padding: 10px;">
 
 <wicket:child/>
 
