--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/authentication/FablabSignInPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/authentication/FablabSignInPage.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div id="menubar" class="menubar">  </div> 
-<div style="padding: 10px;">
+<div id="main" style="padding: 10px;">
 
     <h2>Bitte melden Sie sich an</h2>
 
