--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/authentication/FablabSignOutPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/authentication/FablabSignOutPage.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div id="menubar" class="menubar">  </div> 
-	<div style="padding: 10px;">
+	<div id="main"  style="padding: 10px;">
     <h2>Auf Wiedersehen</h2>    
     <wicket:link>
         <a href="/at/happylab/fablabtool/web/membership/MembershipListPage.html">Anmelden</a>
