fixed SubscriptionListPage and InvoiceListPage

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
@@ -15,7 +15,7 @@
 					ausgetretene Mitglieder
 				</div>
 				<div style="float: right;">
-					Filter: <input wicket:id="filterInput" type="text" name="filter"/>
+					Filter: <form><input wicket:id="filterInput" type="text" name="filter" size="50"/></form>
 				</div>
 			</div>
 			<br/>
